# ihex-crc32

./: Cargo.toml  LICENSE  README.md
data/: example.hex
src/: main.rs
src/hex/: append.rs  hexcrc.rs  mod.rs  packet.rs  region.rs  update.rs
